flask-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: 390844776196.dkr.ecr.ap-northeast-2.amazonaws.com/web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
