DrPlan-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drplan-ingress
  namespace: drplan-app
  labels:
    app: drplan
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: eks-singapore-group
    alb.ingress.kubernetes.io/group.order: '1'
    alb.ingress.kubernetes.io/healthcheck-path: /index.jsp
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drplan-service
            port:
              number: 8080
      - path: /index.jsp
        pathType: Exact
        backend:
          service:
            name: drplan-service
            port:
              number: 8080
      - path: /contents
        pathType: Prefix
        backend:
          service:
            name: drplan-service
            port:
              number: 8080
